--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="BMHS - Your site description here.">
+  <meta name="keywords" content="BMHS, School, Productions, Projects">
+  <meta name="author" content="AP Productions">
+  <title>BMHS - AP Productions</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>BM Hydromech System</title>
