--- a/hydraulicpress.html
+++ b/hydraulicpress.html
@@ -221,7 +221,7 @@
 
 <!-- Info Section -->
 <section class="info-section" id="about">
-  <h2>About Our Lubrication & Cooling System</h2>
+  <h2>About Our Hydraulic Press</h2>
   <p>
     At BM Hydromech, we specialize in the design and manufacture of high-quality hydraulic presses for a wide range of industrial applications. With years of engineering expertise and a commitment to innovation, we deliver reliable, durable, and customized hydraulic press solutions to meet the unique needs of our clients. Whether for metal forming, molding, or heavy-duty industrial tasks, our hydraulic presses are built for precision, performance, and long-lasting value.
   </p>
