--- a/powerpack.html
+++ b/powerpack.html
@@ -86,7 +86,7 @@
 .slides img {
   width: 100%;
   height: 100%;
-  object-fit: contain; /* Image will fully fill, no empty space, no cut-off */
+  object-fit:contain; /* Image will fully fill, no empty space, no cut-off */
 }
 
 
@@ -199,39 +199,37 @@
   <button class="menu-btn" onclick="toggleMenu()">☰</button>
   <div class="nav-links" id="navLinks">
     <a href="index.html">Home</a>
-    <a href="#about">About Power Pack</a>
+    <a href="#about">About Hydraulic Press</a>
   </div>
 </nav>
 
 <!-- Header -->
 <header id="home">
-  <h1>Hydraulic Power Pack</h1>
-  <p>Efficient, Compact, and Reliable Solutions for Hydraulic Applications</p>
+  <h1>Hydraulic Press</h1>
+  <p>Efficient, Compact, and Reliable Solutions</p>
 </header>
 
 <!-- Photo Slider -->
 <div class="slider">
   <div class="slides">
-    <img src="sec.png" alt="Hydraulic Power Pack 1">
-    <img src="sec.png" alt="Hydraulic Power Pack 2">
-    <img src="sec.png" alt="Hydraulic Power Pack 3">
-    <img src="sec.png" alt="Hydraulic Power Pack 4">
+    <img src="press1.jpeg" alt="Hydraulic Power Pack 1">
+    <img src="press2.jpeg" alt="Hydraulic Power Pack 2">
+    <img src="press3.jpeg" alt="Hydraulic Power Pack 3">
+    <img src="press4.jpeg" alt="Hydraulic Power Pack 4">
   </div>
 </div>
 
 <!-- Info Section -->
 <section class="info-section" id="about">
-  <h2>About Our Hydraulic Power Pack</h2>
+  <h2>About Our Hydraulic Press</h2>
   <p>
-    Our Hydraulic Power Packs are designed for a variety of industrial applications.
-    They are engineered to deliver high performance and durability even under the most demanding conditions.
+    At BM Hydromech, we specialize in the design and manufacture of high-quality hydraulic presses for a wide range of industrial applications. With years of engineering expertise and a commitment to innovation, we deliver reliable, durable, and customized hydraulic press solutions to meet the unique needs of our clients. Whether for metal forming, molding, or heavy-duty industrial tasks, our hydraulic presses are built for precision, performance, and long-lasting value.
   </p>
   <ul>
-    <li>Compact and robust design</li>
-    <li>High-efficiency pumps and motors</li>
-    <li>Customizable pressure and flow rates</li>
-    <li>Integrated filtration systems</li>
-    <li>Easy maintenance and long service life</li>
+    <li>Hydraulic systems provide steady and uniform pressing action.</li>
+    <li>Offers accurate control over pressure, speed, and position.</li>
+    <li>Suitable for molding, forging, punching, stamping, and metal forming.</li>
+    <li>Built with strong materials to handle heavy-duty industrial use.</li>
   </ul>
 </section>
 
