--- a/powerpack.html
+++ b/powerpack.html
@@ -65,42 +65,61 @@
       font-size: 18px;
       color: #555;
     }
-    .slider {
-  width: 80%;
-  max-width: 800px;
-  margin: 40px auto;
-  position: relative;
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
-  aspect-ratio: 2 / 1; /* Automatically keeps width:height ratio */
-}
 
-.slides {
-  display: flex;
-  width: 400%;
-  height: 100%;
-  animation: slide 12s infinite;
-}
-
-.slides img {
-  width: 100%;
-  height: 100%;
-  object-fit:contain; /* Image will fully fill, no empty space, no cut-off */
-}
-
-
-    @keyframes slide {
-      0% { margin-left: 0; }
-      20% { margin-left: 0; }
-      25% { margin-left: -100%; }
-      45% { margin-left: -100%; }
-      50% { margin-left: -200%; }
-      70% { margin-left: -200%; }
-      75% { margin-left: -300%; }
-      95% { margin-left: -300%; }
-      100% { margin-left: 0; }
+    .slider-container {
+      width: 90%;
+      max-width: 400px;
+      overflow: hidden;
+      position: relative;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+      background: white;
+      margin: 40px auto;
     }
+
+    .slider {
+      display: flex;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .slide {
+      min-width: 100%;
+      height: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .slide img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
+
+    .navigation {
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      transform: translateY(-50%);
+    }
+
+    .nav-button {
+      background: rgba(0, 0, 0, 0.5);
+      border: none;
+      color: white;
+      padding: 10px;
+      cursor: pointer;
+      border-radius: 50%;
+      transition: background 0.3s;
+    }
+
+    .nav-button:hover {
+      background: rgba(0, 0, 0, 0.8);
+    }
+
     .info-section {
       max-width: 1000px;
       margin: 50px auto;
@@ -181,8 +200,8 @@
       .nav-links.active {
         display: flex;
       }
-      .slider {
-        width: 90%;
+      .slider-container {
+        max-width: 300px;
       }
       .footer-container {
         flex-direction: column;
@@ -199,37 +218,44 @@
   <button class="menu-btn" onclick="toggleMenu()">☰</button>
   <div class="nav-links" id="navLinks">
     <a href="index.html">Home</a>
-    <a href="#about">About Hydraulic Press</a>
+    <a href="#about">About Power Pack</a>
   </div>
 </nav>
 
 <!-- Header -->
 <header id="home">
-  <h1>Hydraulic Press</h1>
-  <p>Efficient, Compact, and Reliable Solutions</p>
+  <h1>Hydraulic Power Pack</h1>
+  <p>Efficient, Compact, and Reliable Solutions for Hydraulic Applications</p>
 </header>
 
 <!-- Photo Slider -->
-<div class="slider">
-  <div class="slides">
-    <img src="press1.jpeg" alt="Hydraulic Power Pack 1">
-    <img src="press2.jpeg" alt="Hydraulic Power Pack 2">
-    <img src="press3.jpeg" alt="Hydraulic Power Pack 3">
-    <img src="press4.jpeg" alt="Hydraulic Power Pack 4">
+<div class="slider-container">
+  <div class="slider" id="slider">
+    <div class="slide"><img src="powerpack1.jpeg" alt="Hydraulic Power Pack 1"></div>
+    <div class="slide"><img src="powerpack2.jpeg" alt="Hydraulic Power Pack 2"></div>
+    <div class="slide"><img src="powerpack3.jpeg" alt="Hydraulic Power Pack 3"></div>
+    <div class="slide"><img src="powerpack4.jpeg" alt="Hydraulic Power Pack 4"></div>
+    <div class="slide"><img src="powerpack5.jpeg" alt="Hydraulic Power Pack 5"></div>
+  </div>
+  <div class="navigation">
+    <button class="nav-button" onclick="prevSlide()">&#10094;</button>
+    <button class="nav-button" onclick="nextSlide()">&#10095;</button>
   </div>
 </div>
 
 <!-- Info Section -->
 <section class="info-section" id="about">
-  <h2>About Our Hydraulic Press</h2>
+  <h2>About Our Hydraulic Power Pack</h2>
   <p>
-    At BM Hydromech, we specialize in the design and manufacture of high-quality hydraulic presses for a wide range of industrial applications. With years of engineering expertise and a commitment to innovation, we deliver reliable, durable, and customized hydraulic press solutions to meet the unique needs of our clients. Whether for metal forming, molding, or heavy-duty industrial tasks, our hydraulic presses are built for precision, performance, and long-lasting value.
+    Our Hydraulic Power Packs are designed for a variety of industrial applications.
+    They are engineered to deliver high performance and durability even under the most demanding conditions.
   </p>
   <ul>
-    <li>Hydraulic systems provide steady and uniform pressing action.</li>
-    <li>Offers accurate control over pressure, speed, and position.</li>
-    <li>Suitable for molding, forging, punching, stamping, and metal forming.</li>
-    <li>Built with strong materials to handle heavy-duty industrial use.</li>
+    <li>Compact and robust design</li>
+    <li>High-efficiency pumps and motors</li>
+    <li>Customizable pressure and flow rates</li>
+    <li>Integrated filtration systems</li>
+    <li>Easy maintenance and long service life</li>
   </ul>
 </section>
 
@@ -255,6 +281,24 @@
   function toggleMenu() {
     const navLinks = document.getElementById('navLinks');
     navLinks.classList.toggle('active');
+  }
+
+  let currentSlide = 0;
+  const slider = document.getElementById("slider");
+  const totalSlides = slider.children.length;
+
+  function updateSlidePosition() {
+    slider.style.transform = `translateX(-${currentSlide * 100}%)`;
+  }
+
+  function prevSlide() {
+    currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
+    updateSlidePosition();
+  }
+
+  function nextSlide() {
+    currentSlide = (currentSlide + 1) % totalSlides;
+    updateSlidePosition();
   }
 </script>
 
